Fixed glassmoprhism with color themes and made shift card title hoverable with an ellipsis

--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -173,6 +173,7 @@ button{
 .glassmorphic{
     z-index: 2;
     backdrop-filter: blur(10px);
+    background-color: var(--glassmorphic-bg-color);
 }
 
 .lighterGlassmorphic{
